# oakfoam

./: .hgignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  Readme  TODO  WINDOWS  autogen.sh  benchmark.gtp  build-linux.sh  build-pkg.sh  build-win.sh  build.h  build.nsi  callgrind.sh  config.h.in  configure  configure.ac  description-pak  genmove.gtp  postinstall-pak  postremove-pak  profile.gtp  web.gtp
ReinforcmentLearning/: OneLearnIteration.sh  ReinforcementLearning.sh  readme.txt
ReinforcmentLearning/CNN/: CNN-data-collection.sh  CNN-data.sh  count_leveldb.py  initial.gamma
ReinforcmentLearning/gomill/: gomill-test.ctl  gomill.ctl  nicego-cnn-fix.gtp  nicego-cnn.gtp  selfplay.prototxt
ReinforcmentLearning/train-net/: checkOverfitting.pl  concat_leveldb_multi_at_first.py  generate_sample_data_leveldb.py  lenet_solver_value_small.prototxt  lenet_train_test_value_small.prototxt
configs/: go_value_pro_19_vt3.prototxt  nicego-cnn-06.gtp  readme.txt
docs/: Doxyfile  IncrementalMMAlgorithm.lyx
m4/: ax_boost_base.m4  ax_boost_system.m4  ax_boost_thread.m4
old/: backup.sh  makefile  moves.txt  oakfoam  oakfoam.c  oakfoam.h  test.sh  think.c  think.h  todo.txt
other/: debmake-commands.txt  default-rc.sh  features-comparison.sh  features-train.sh  gogui.gtp  harvest-collection.sh  harvest-patterns.sh  harvest-sort.sh  oakfoam-display.sh  oakfoam_ursh_2010-05-08.sgf  profiling.txt  try-instructions.txt
regression/: all.suite  basics.tst  clear-results.sh  create_expected.pl  csplayouts.tst  kgs.tst  nicego-csplayouts.gtp  playouts.tst  run-csplayouts.sh  run.sh  trained_playout_and_circ_for_cnn.gamma
regression/fuego/: 9x9-blunder-endgame.tst  9x9-opening.tst  AUTHORS  README  all.suite  backfill.tst  blunder_long_ladder_19.tst  blunder_long_ladder_19b.tst  blunder_play_near_dead_19.tst  escape_capture_19.tst  eval_seki.tst  final_moves.tst  life_and_death_nakade.tst  nicego-19N-10k.gtp  performance_JAIST2012.tst  performance_UEC2013.tst  performance_icgc2008.tst  performance_middlegame_hard_9x9.tst  performance_pro_9x9.tst  run-10k.sh  run-400k  tactics_19.tst  two_safe_groups_0.3.tst  two_safe_groups_0.4.tst  two_safe_groups_0.5.tst  two_safe_groups_one_solid_0.3.tst  two_safe_groups_one_solid_0.4.tst  two_safe_groups_one_solid_0.5.tst  uct_basics.tst  uct_blunder.tst  uct_endgame.tst  uct_ko.tst  uct_life_and_death.tst  uct_move.tst  uct_pass_basics.tst  uct_seki.tst  uct_semeai.tst  uct_semeai_blunder.tst
regression/fuego/sgf/games/2013/UEC/: ttt
regression/sgf/basics/: 01.sgf  02.sgf  03.sgf  04.sgf
regression/sgf/kgs-games/: game_2013-06-10_23:15:53.sgf  game_2013-06-11_04:57:22.sgf  game_2013-06-11_05:46:11.sgf  game_2013-06-11_06:04:21.sgf  game_2013-06-11_07:03:18.sgf  game_2013-06-11_11:34:29.sgf  game_2013-06-11_17:28:13.sgf  game_2013-07-07_21:42:22.sgf  game_2013-07-15_20:35:35.sgf
regression/sgf/playouts/: 01.sgf
scripts/CNN/: CNN-data-collection-results.sh  CNN-data-collection.sh  CNN-data-result.sh  CNN-data.sh  classify.py  generate_sample_data.py  generate_sample_data_leveldb.py  lenet.prototxt  lenet_solver.prototxt  lenet_train_test.prototxt  readme  train_lenet.sh
scripts/benchmark/: multi-core.sh
scripts/book/: README  book-fetch.sh
scripts/decisiontrees/: README  dt-compare.sh  dt-features.sh  dt-grow.sh  dt-init.sh  dt-train.sh  mm-fetch.sh
scripts/features/: CNN-data-collection.sh  CNN-data.sh  README  README_circ  count.pl  generate_sample_data.py  harvest-circular-not-played.sh  harvest-circular-played.sh  harvest-circular.sh  harvest-collection-circular-not-played-parallel.sh  harvest-collection-circular-played-parallel.sh  harvest-collection-circular-played.sh  harvest-collection-circular-range.sh  harvest-collection-circular.sh  harvest-collection-circular2.sh  harvest-collection.sh  harvest-combine-gawk.sh  harvest-combine.sh  harvest-patterns.sh  mm-fetch.sh  mm.patch  moves.pl  remove_unimportant_circ_patterns.pl  test-compare.sh  test-filter.sh  test-stages.sh  train-gammas.sh  train-prepare-circular.sh  train-prepare.sh
scripts/general/: analyse.awk  bad-surewin.sh  kgs.pl  moves.awk  observe.sed  observe.sh  plot.oct  sgf2gtp.pl  weights.oct  wr-graph.pl  wr-graph.sh
scripts/move-prediction/: README  example.test  job-init.sh  job-queue.sh.example  job-run.sh  plot.py  plot_example.json  run.sh
scripts/testing/: deploy-ssh.sh
src/: Oakfoam.cc  Oakfoam.h  main.cc
src/engine/: Benson.cc  Benson.h  Book.cc  Book.h  DecisionTree.cc  DecisionTree.h  Engine.cc  Engine.h  Features.cc  Features.h  Go.cc  Go.h  Parameters.cc  Parameters.h  Pattern.cc  Pattern.h  Playout.cc  Playout.h  Random.cc  Random.h  Time.cc  Time.h  Tree.cc  Tree.h  UCT.cc  UCT.h  Util.cc  Util.h  Worker.cc  Worker.h
src/gtp/: Gtp.cc  Gtp.h
src/web/: Web.cc  Web.h
trials/: oakfoam.rc  run-trials.sh
www/: index.html
www/css/: main.css
www/js/: main.js
